login_front-end

--- a/app/Template/estrutura.html
+++ b/app/Template/estrutura.html
@@ -13,14 +13,14 @@
 <body>
     <div id="corpo"> 
         <div id="topo">
-            <nav class="navbar navbar-dark bg-dark">
+            <nav class="navbar navbar-dark" style="background-color: hsl(247, 100%, 28%);">
                 <div class="container-fluid">
                     <div class="d-flex">
-                        <a class="navbar-brand me-3" href="?pagina=Home">Home</a>
+                        <a class="navbar-brand me-3" href="?pagina=Home"><i class="bi bi-house-fill"></i></a>
                         <a class="navbar-brand me-3" href="?pagina=funcionario"><i class="fa fa-user-md"></i></a>
                         <a class="navbar-brand me-3" href="?pagina=paciente"><i class="bi bi-file-earmark-person-fill"></i></a>
-                        <a class="navbar-brand me-3" href="?pagina=agendamento"><i class="bi bi-calendar-event-fill"></i></a>
                         <a class="navbar-brand me-3" href="?pagina=ficha&metodo=create"><i class="bi bi-clipboard-fill"></i></a>
+                        <a class="navbar-brand me-3" href="?pagina=ficha&metodo=create"><i class="bi bi-box-arrow-left"></i></a>
 
 
 
